--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -51,12 +51,15 @@
 				"editor.formatOnSave": true,
 				"latex-workshop.latex.pdfWatch.delay": 500,
 				"latex-workshop.latex.watch.delay": 500,
-				"latex-workshop.codespaces.portforwarding.openDelay": 20000
+				"latex-workshop.codespaces.portforwarding.openDelay": 20000,
+				"grammarly.files.include": ["*.tex"]
 			},
 			"extensions": [
 				"James-Yu.latex-workshop",
 				// Remove the following line if you do not want Live-Collaboration Feature
-				"ms-vsliveshare.vsliveshare"
+				"ms-vsliveshare.vsliveshare",
+				// Remove the following line if you do not want Grammarly
+				"znck.grammarly"
 			]
 		}
 	}
