--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -52,7 +52,16 @@
 				"latex-workshop.latex.pdfWatch.delay": 500,
 				"latex-workshop.latex.watch.delay": 500,
 				"latex-workshop.codespaces.portforwarding.openDelay": 20000,
-				"grammarly.files.include": ["*.tex"]
+				// Uncomment the following to exclude .md files from grammarly checker.
+				// "grammarly.files.include": [
+				// 	"*.md"
+				// ],
+				"grammarly.selectors": [
+					{
+						"language": "latex",
+						"scheme": "file"
+					}
+				]
 			},
 			"extensions": [
 				"James-Yu.latex-workshop",
