--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -72,9 +72,11 @@
 			},
 			"extensions": [
 				"James-Yu.latex-workshop",
-				// Remove the following line if you do not want Live-Collaboration Feature
+				// Remove the line below if you do not want Live-Collaboration Feature
 				"ms-vsliveshare.vsliveshare",
-				// Remove the following line if you do not want Grammarly
+				// Uncomment the line below if you do not want LanguageTool Support
+				// "valentjn.vscode-ltex",
+				// Remove the line below if you do not want Grammarly
 				"znck.grammarly"
 			]
 		}
