--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -72,6 +72,7 @@
 			},
 			"extensions": [
 				"James-Yu.latex-workshop",
+				"GitHub.copilot",
 				// Remove the line below if you do not want Live-Collaboration Feature
 				"ms-vsliveshare.vsliveshare",
 				// Uncomment the line below if you do not want LanguageTool Support
